--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Rebecca Flex</h3>
+  <img src="./images/ntr.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>ntr</h3>
   <p>Support</p>
 </div>
 
