rjani image added

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Jan Ringo</h3>
+  <img src="./images/rajani.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>rajani</h3>
   <p>Boss man</p>
 </div>
 
