--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Kai Ringo</h3>
+  <img src="./images/mohanlal.webp" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>mohanlal</h3>
   <p>Fixer</p>
 </div>
 
