--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <div class="w3-quarter">
   <img src="./images/mohanlal.webp" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>mohanlal</h3>
+  <h3>Lalettan</h3>
   <p>Fixer</p>
 </div>
 
